<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:context=".Fragmetn.FirstFragment">

        <LinearLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_redo"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginRight="10dp"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/ic_undo_24px" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginRight="15dp"
                android:background="#0000"
                android:rotationX="0"
                android:rotationY="180"
                android:scaleType="fitXY"
                android:src="@drawable/ic_undo_24px" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="#0000"
                android:scaleType="fitXY"
                android:id="@+id/btn_done"
                android:src="@drawable/ic_done_24px" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textview_first"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="#0000"
            android:gravity="top"
            android:includeFontPadding="false"
            android:padding="15dp"
            android:text="@string/hello_first_fragment"
            app:layout_constraintBottom_toTopOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rel1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.70" />

        <LinearLayout
            android:id="@+id/bottom_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ffde03"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#0000"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_crop_original_white_18dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#0000"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_check_box_white_18dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#0000"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_format_bold_white_18dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#0000"
                android:src="@android:drawable/ic_menu_report_image" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_first" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>